# HFUT-RM-SB-Vision2022

./: README.md
tansor/CVRM2022/: CMakeLists.txt  main.cpp
tansor/CVRM2022/AutoAim/: AutoAim(predictor).cpp  AutoAim(下).cpp  AutoAim(复件).cpp  AutoAim.cpp  AutoAim.h  CMakeLists.txt  FindTensorRT.cmake
tansor/CVRM2022/AutoAim/detector/: TRTModule.cpp  TRTModule.hpp  V4L2VideoCapture.cpp  V4L2VideoCapture.h
tansor/CVRM2022/asset/: camera-param.yml
tansor/CVRM2022/core_io/: CMakeLists.txt  robot.cpp  sensors.cpp
